Customized graphics for moi, me, me.
Signed-off-by: Matt Oberlin <moberlin8@gmail.com>

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -730,7 +730,7 @@ input {
 	width: 400px;
 	height: 600px;
 	margin-left: 600px;
-	background: url(/images/skills2.png) no-repeat;
+	background: url(/images/weather2.png) no-repeat;
 
 }
 
