--- a/views/index.html
+++ b/views/index.html
@@ -24,8 +24,9 @@
         <ul id="main-menu">
           <li><a href="#head">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#skills">skills</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#skills">Weather</a></li>
+          <li><a href="#portfolio">Pictures</a></li>
+          <li><a href="#blog">Blog</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
@@ -129,26 +130,26 @@
     <div class="container_16 clearfix">
       <div class="grid_16 skills ">
 
-        <h3>Ai</h3>
-        <h4>80%</h4>
+        <h3>Temperature</h3>
+        <h4>52 &#176;F</h4>
         <div class="progress">
           <div class="bar" data-width="80"></div>
         </div>
 
 
-        <h3>Ps</h3>
-        <h4>100%</h4>
+        <h3>Dew Point</h3>
+        <h4>40 &#176;F</h4>
         <div class="progress">
           <div class="bar" data-width="100"></div>
         </div>
 
-        <h3>Id</h3>
-        <h4>70%</h4>
+        <h3>Wind</h3>
+        <h4>70 knots</h4>
         <div class="progress">
           <div class="bar" data-width="70"></div>
         </div>
 
-        <h3>Fl</h3>
+        <h3>?????</h3>
         <h4>90%</h4>
         <div class="progress">
           <div class="bar" data-width="90"></div>
@@ -220,6 +221,27 @@
       </div>
     </div>
   </section>
+
+  <!--Blog-->
+
+<div class="container_16 clearfix">
+  <div class="grid_4 push_6"></div>
+</div>
+
+<section id="blog">
+  <div class="container_16 clearfix">
+    <div class="grid_16">
+      <div class="align-center ">
+        <ul>
+          <li>Thing One</a></li>
+          <li>Thing Two</a></li>
+          <li>Thing Three</a></li>
+          <li>Thing Four</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
   <!--CONTACT-->
 <section id="contact">
   <div class="container_16 clearfix">
