More updates to text, basic sections
Signed-off-by: Matt Oberlin <moberlin8@gmail.com>

--- a/views/index.html
+++ b/views/index.html
@@ -3,10 +3,13 @@
 <!--[if !IE]><html lang="en-us"><![endif]-->
 <head>
   <meta charset="UTF-8">
-  <title>Locomotive theme</title>
+  <title>MattO.TV</title>
 
-  <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+<!-- It's my site. I'm not even going to bother supporting Internet Explorer -->
+  <!--[if IE]>
+    <script type="text/javascript">
+        window.location = "http://letmegooglethat.com/?q=why+shouldn%27t+I+use+internet+explorer";
+    </script>
   <![endif]-->
 
   <link rel="stylesheet" type="text/css" href="/css/style.css" media="all"/>
@@ -24,7 +27,7 @@
         <ul id="main-menu">
           <li><a href="#head">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#skills">Weather</a></li>
+          <li><a href="#weather">Weather</a></li>
           <li><a href="#portfolio">Pictures</a></li>
           <li><a href="#blog">Blog</a></li>
           <li><a href="#contact">Contact</a></li>
@@ -126,21 +129,21 @@
     </div>
   </section>
   <!--SKILLS-->
-  <section id="skills">
+  <section id="weather">
     <div class="container_16 clearfix">
       <div class="grid_16 skills ">
 
         <h3>Temperature</h3>
         <h4>52 &#176;F</h4>
         <div class="progress">
-          <div class="bar" data-width="80"></div>
+          <div class="bar" data-width="52"></div>
         </div>
 
 
         <h3>Dew Point</h3>
         <h4>40 &#176;F</h4>
         <div class="progress">
-          <div class="bar" data-width="100"></div>
+          <div class="bar" data-width="40"></div>
         </div>
 
         <h3>Wind</h3>
@@ -164,7 +167,7 @@
     <div class="container_16 clearfix">
         <div class="grid_8 push_4"></div>
       <div class="grid_16">
-        <h2 id="portfolio">Portfolio</h2>
+        <h2 id="portfolio">Pictures</h2>
     <!--GALLERY FILTER-->
         <ul class="filter">
           <li class="selected"><a href="#selected" rel="all">All</a></li>
