Test fix for images not deployed.
Signed-off-by: Matt Oberlin <moberlin8@gmail.com>

--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>MattO.TV</title>
 
-<!-- It's my site. I'm not even going to bother supporting Internet Explorer -->
+<!-- It's my site. I'm not even going to bother supporting Internet Explorer, so I get to tell them where to go -->
   <!--[if IE]>
     <script type="text/javascript">
         window.location = "http://letmegooglethat.com/?q=why+shouldn%27t+I+use+internet+explorer";
