Deleted images to start clean.
Signed-off-by: Matt Oberlin <moberlin8@gmail.com>

--- a/views/index.html
+++ b/views/index.html
@@ -21,7 +21,7 @@
   <div id="head"></div>
   </div>
   <header id="header" class="clearfix">
-    <a class="logo"><img width="700" height="400" src="/images/head2.gif" alt="" /></a>
+    <a class="logo"><img width="700" height="400" src="/images/head2.png" alt="" /></a>
     <div class="nav-container">
       <nav>
         <ul id="main-menu">
