Update social medai icons
Signed-off-by: Matt Oberlin <moberlin8@gmail.com>

--- a/views/index.html
+++ b/views/index.html
@@ -275,12 +275,10 @@
     <div class="grid_16">
       <div class="align-center social">
         <ul>
-          <li class="google"><a href="#google">google</a></li>
-          <li class="flickr"><a href="#flickr">flickr</a></li>
-          <li class="twitter"><a href="#twitter">twitter</a></li>
-          <li class="dribble"><a href="#dribble">dribble</a></li>
-          <li class="behance"><a href="#behance">behance</a></li>
-          <li class="facebook"><a href="#facebook">facebook</a></li>
+          <li class="google"><a href="https://plus.google.com/u/0/107701873787294623798">Google</a></li>
+          <li class="instagram"><a href="https://www.instagram.com/moberlin8/">Instagram</a></li>
+          <li class="twitter"><a href="https://twitter.com/javatree">Twitter</a></li>
+          <li class="facebook"><a href="https://www.facebook.com/fredmuscawally">Facebook</a></li>
         </ul>
       </div>
     </div>
